<resources>
    <string name="app_name">Book App Project</string>

    <string name="search_textView_hint">Type book name or author</string>

    <string name="discover_title">Discover</string>
    <string name="popular_title">Popular</string>
    <string name="more_title">More</string>
    <string name="recommended_title">Recommended</string>

    <string name="details_title">The Light between Oceans</string>
    <string name="writer_title">M.L. Stedman</string>
    <string name="type_title">Fiction Novel</string>

    <string name="post_point">4.5</string>
    <string name="post_review">1.253 reviews</string>

    <string name="chat_image_text">See Reviews</string>
    <string name="book_image_text">Read Book</string>
    <string name="speaker_image_text">Listen Book</string>
    <string name="prolog_title">PROLOGUE</string>
    <string name="prolog_text">A captivating, beautiful, and stunningly
            accomplished debut novel that opens in 1918
            Australia - the story of a lighthouse keeper and his wife who make one
        devastating choice that forever changes two worlds. <a href=""> More</a></string>

    <string name="details_similar_book_title">Some Similar Books</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>